--- a/p/.tmux.conf
+++ b/p/.tmux.conf
@@ -4,6 +4,7 @@ bind-key C-] send-prefix
 
 # escape delay with vim
 set -s escape-time 0
+set -g repeat-time 1000
 
 bind-key h select-pane -L
 bind-key j select-pane -D
@@ -26,10 +27,15 @@ bind -r m resize-pane -Z
 
 set -g mouse on
 
+setw -g mode-keys vi
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+set -g @catppuccin_flavor 'macchiato'
 
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
@@ -50,11 +56,7 @@ set -g @catppuccin_status_connect_separator "no"
 
 set -g @catppuccin_directory_text "#{pane_current_path}"
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+set -g @treemux-tree-nvim-init-file '~/.tmux/plugins/treemux/configs/treemux_init.lua'
+set -g @plugin 'kiyoon/treemux'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
