--- a/p/picom.conf
+++ b/p/picom.conf
@@ -2,6 +2,18 @@
 #             Shadows           #
 #################################
 
+opacity-rule = [
+  "90:class_g = 'kitty' && focused",
+  "70:class_g = 'kitty' && !focused"
+];
+
+blur : {
+  method = "dual_kawase";
+}
+
+rounded-corners-exclude = [
+  "class_g = 'dwm'",
+]
 
 shadow = true;
 
@@ -67,7 +79,7 @@ inactive-opacity-override = false;
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 5
+corner-radius = 10
 
 
 
