--- a/p/.tmux.conf
+++ b/p/.tmux.conf
@@ -11,6 +11,10 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+bind-key b set -g status off
+bind-key B set -g status on
+
+
 set-option -g status-position top
 
 unbind %
@@ -22,41 +26,39 @@ bind - split-window -v
 unbind r
 bind r source-file ~/.tmux.conf
 
-# set the current pane to full screen (toggle)
 bind -r m resize-pane -Z
 
 set -g mouse on
-
 setw -g mode-keys vi
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
+
+set -g default-terminal "tmux-256color"
+set -g renumber-windows on
+set -g base-index 1
+
+
+bind-key -T copy-mode-vi Enter \
+    send -X copy-selection-and-cancel \; \
+    run-shell "~/life/scripts/error_jumper.sh"
+
+
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key e run-shell "~/life/scripts/error_jumper.sh"
+
+# restore save session automate
+set -g @continuum-restore 'on'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'vaaleyard/tmux-dotbar'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
-set -g @catppuccin_flavor 'macchiato'
-
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_right "session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
-
-set -g @treemux-tree-nvim-init-file '~/.tmux/plugins/treemux/configs/treemux_init.lua'
-set -g @plugin 'kiyoon/treemux'
-
+set -g @tmux-dotbar-position top
+set -g @tmux-dotbar-left "true"
+set -g @tmux-dotbar-bold-current-window "true"
+set -g @tmux-dotbar-fg-current "#d46820"
+# set -g @tmux-dotbar-bg "#0B0E14"
+set -g @tmux-dotbar-bg "#000000"
 run '~/.tmux/plugins/tpm/tpm'
