--- a/p/picom/picom.conf
+++ b/p/picom/picom.conf
@@ -1,28 +1,17 @@
-#################################
-#             Shadows           #
-#################################
-
 opacity-rule = [
-  "90:class_g = 'kitty' && focused",
-  "70:class_g = 'kitty' && !focused"
+  "80:class_g = 'kitty' && !focused",
+  "100:!focused && !class_g = 'kitty'"
 ];
 
-blur : {
-  method = "dual_kawase";
+# dual_kawase
+blur: {
+  method = "dual_kawase"
+  strength = 3;
 }
 
 rounded-corners-exclude = [
   "class_g = 'dwm'",
 ]
-
-shadow = true;
-
-shadow-radius = 7;
-
-shadow-offset-x = -7;
-
-shadow-offset-y = -7;
-
 
 #################################
 #           Fading              #
@@ -36,11 +25,11 @@ fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
-fade-in-step = 0.03;
+fade-in-step = 0.05;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
 # fade-out-step = 0.03
-fade-out-step = 0.03;
+fade-out-step = 0.05;
 
 
 #################################
@@ -52,24 +41,6 @@ fade-out-step = 0.03;
 # inactive-opacity = 1
 inactive-opacity = 0.8;
 
-# Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
-frame-opacity = 0.7;
-
-# Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
-# inactive-opacity-override = true
-inactive-opacity-override = false;
-
-
-# Use fixed inactive dim value, instead of adjusting according to window opacity.
-# inactive-dim-fixed = 1.0
-
-# Specify a list of opacity rules, in the format `PERCENT:PATTERN`,
-# like `50:name *= "Firefox"`. picom-trans is recommended over this.
-# Note we don't make any guarantee about possible conflicts with other
-# programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
-# example:
-#
 
 
 #################################
@@ -79,16 +50,9 @@ inactive-opacity-override = false;
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 10
+corner-radius = 15
 
 
-
-#################################
-#     Background-Blurring       #
-#################################
-
-
-blur-kern = "3x3box";
 
 #################################
 #       General Settings        #
@@ -114,11 +78,8 @@ detect-rounded-corners = true;
 # detect-client-opacity = false
 detect-client-opacity = true;
 
-
-
 use-damage = true;
 
-log-level = "warn";
 
 wintypes:
 {
@@ -128,3 +89,20 @@ wintypes:
   popup_menu = { opacity = 0.8; }
   dropdown_menu = { opacity = 0.8; }
 };
+
+
+# animations = ({
+#     triggers = ["open", "show"];
+#     preset = "appear";
+#     duration = 0.1;
+#     scale = 0.5;
+# },{
+#     triggers = ["close", "hide"];
+#     preset = "disappear";
+#     duration = 0.1;
+#     scale = 0.9;
+# },{
+#     triggers = ["geometry"];
+#     preset = "geometry-change";
+#     duration = 0.2;
+# });
